--- a/website/index.html
+++ b/website/index.html
@@ -13,18 +13,15 @@
       -webkit-user-drag: none;
       user-select: none;
     }
-
     html, body {
       height: 100%;
       background-color: white;
       font-family: Arial, sans-serif;
       overflow-x: hidden;
     }
-
     body {
       color: black;
     }
-
     header {
       position: fixed;
       top: 0;
@@ -40,7 +37,6 @@
       z-index: 1200;
       border-bottom: 1px solid #ccc;
     }
-
     .menu-icon, .cart-icon-container {
       display: flex;
       align-items: center;
@@ -49,7 +45,6 @@
       z-index: 1300;
       position: relative;
     }
-
     .menu-icon {
       width: 22px;
       height: 16px;
@@ -57,7 +52,6 @@
       justify-content: center;
       position: relative;
     }
-
     .menu-icon div {
       position: absolute;
       width: 22px;
@@ -67,25 +61,20 @@
       border-radius: 2px;
       transition: all 0.4s ease;
     }
-
     .menu-icon div:nth-child(1) { top: 0; }
     .menu-icon div:nth-child(2) { top: 7px; }
     .menu-icon div:nth-child(3) { top: 14px; }
-
     .menu-icon.open div:nth-child(1) {
       transform: rotate(45deg);
       top: 7px;
     }
-
     .menu-icon.open div:nth-child(2) {
       opacity: 0;
     }
-
     .menu-icon.open div:nth-child(3) {
       transform: rotate(-45deg);
       top: 7px;
     }
-
     .logo-container {
       position: absolute;
       left: 50%;
@@ -93,16 +82,13 @@
       transform: translate(-50%, -50%);
       z-index: 1300;
     }
-
     .logo {
       height: 36px;
     }
-
     .cart-icon {
       height: 22px;
       display: block;
     }
-
     .cart-count {
       position: absolute;
       top: -6px;
@@ -117,7 +103,6 @@
       text-align: center;
       display: none;
     }
-
     .image-box {
       margin-top: 64px;
       width: 100%;
@@ -126,43 +111,40 @@
       background-color: black;
       overflow: hidden;
     }
-
     .slider {
       display: flex;
       width: 300%;
       height: 100%;
-      transition: transform 0.6s ease-in-out;
+      transition: transform 0.5s ease-in-out;
     }
-
     .slide-img {
       flex: 0 0 100%;
       height: 400px;
       object-fit: cover;
+      user-select: none;
+      -webkit-user-drag: none;
     }
-
     .arrow {
       position: absolute;
       top: 50%;
       transform: translateY(-50%);
-      width: 20px;
-      height: 20px;
+      width: 14px;
+      height: 14px;
       border: solid white;
-      border-width: 0 3px 3px 0;
-      padding: 5px;
+      border-width: 0 2.5px 2.5px 0;
+      padding: 4px;
       cursor: pointer;
       z-index: 2;
+      user-select: none;
     }
-
     .arrow.left {
-      left: 10px;
+      left: 8px;
       transform: translateY(-50%) rotate(135deg);
     }
-
     .arrow.right {
-      right: 10px;
+      right: 8px;
       transform: translateY(-50%) rotate(-45deg);
     }
-
     .sidebar {
       position: fixed;
       top: 0;
@@ -180,17 +162,17 @@
       overflow-y: auto;
       z-index: 1100;
       color: black;
-      transition: left 0.4s ease-in-out;
+      transition: left 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+      /* smoother easing */
+      will-change: left;
+      -webkit-overflow-scrolling: touch;
     }
-
     .sidebar.open {
       left: 0;
     }
-
     main {
       display: none;
     }
-
     @media (min-width: 768px) {
       header {
         display: none;
@@ -217,14 +199,14 @@
     </div>
   </header>
 
-  <div class="image-box">
+  <div class="image-box" aria-label="Image slider">
     <div class="slider" id="slider">
       <img class="slide-img" src="https://picsum.photos/800/800?random=1" alt="Image 1" />
       <img class="slide-img" src="https://picsum.photos/800/800?random=2" alt="Image 2" />
       <img class="slide-img" src="https://picsum.photos/800/800?random=3" alt="Image 3" />
     </div>
-    <div class="arrow left" onclick="prevSlide()"></div>
-    <div class="arrow right" onclick="nextSlide()"></div>
+    <div class="arrow left" aria-label="Previous image" role="button" tabindex="0"></div>
+    <div class="arrow right" aria-label="Next image" role="button" tabindex="0"></div>
   </div>
 
   <nav id="sidebar" class="sidebar" aria-hidden="true" role="navigation" aria-label="Sidebar navigation">
@@ -238,40 +220,58 @@
     const cartCountEl = document.getElementById('cartCount');
     const slider = document.getElementById('slider');
     const slides = document.querySelectorAll('.slide-img');
+    const leftArrow = document.querySelector('.arrow.left');
+    const rightArrow = document.querySelector('.arrow.right');
+
     let currentIndex = 0;
     const totalSlides = slides.length;
 
+    // Sidebar toggle
     menuToggle.addEventListener('click', () => {
       const isOpen = menuToggle.classList.toggle('open');
       sidebar.classList.toggle('open', isOpen);
       sidebar.setAttribute('aria-hidden', !isOpen);
     });
 
+    // Reload page on logo click
     logoContainer.addEventListener('click', () => {
       window.location.reload();
     });
 
-    ['menuToggle', 'logoContainer'].forEach(id => {
-      const el = document.getElementById(id);
-      el.addEventListener('keydown', (e) => {
-        if (e.key === 'Enter') {
-          el.click();
-        }
-      });
+    // Accessibility for keyboard toggling
+    ['menuToggle', 'logoContainer', 'leftArrow', 'rightArrow'].forEach(id => {
+      const el = document.getElementById(id) || document.querySelector(`.${id}`);
+      if (el) {
+        el.addEventListener('keydown', (e) => {
+          if (e.key === 'Enter') {
+            el.click();
+          }
+        });
+      }
     });
 
+    // Arrows click handlers
+    leftArrow.addEventListener('click', prevSlide);
+    rightArrow.addEventListener('click', nextSlide);
+
+    leftArrow.addEventListener('keydown', e => { if(e.key === 'Enter') prevSlide(); });
+    rightArrow.addEventListener('keydown', e => { if(e.key === 'Enter') nextSlide(); });
+
+    // Update cart count
     function updateCartCount(count) {
       cartCountEl.textContent = count;
       cartCountEl.style.display = count > 0 ? 'inline-block' : 'none';
     }
-
     updateCartCount(0);
 
+    // Show slide by index (no intermediate images, smooth slide)
     function showSlide(index) {
       const offset = index * -100;
+      slider.style.transition = 'transform 0.5s ease-in-out';
       slider.style.transform = `translateX(${offset}%)`;
     }
 
+    // Next and previous slide
     function nextSlide() {
       currentIndex = (currentIndex + 1) % totalSlides;
       showSlide(currentIndex);
@@ -282,7 +282,16 @@
       showSlide(currentIndex);
     }
 
-    setInterval(nextSlide, 10000);
+    // Auto slide every 10 seconds
+    let slideInterval = setInterval(nextSlide, 10000);
+
+    // Pause auto slide on manual arrow clicks, resume after 10s
+    function resetInterval() {
+      clearInterval(slideInterval);
+      slideInterval = setInterval(nextSlide, 10000);
+    }
+    leftArrow.addEventListener('click', resetInterval);
+    rightArrow.addEventListener('click', resetInterval);
   </script>
 </body>
 </html>
