--- a/website/index.html
+++ b/website/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Matt Scianna</title>
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap" rel="stylesheet" />
   <style>
@@ -10,60 +10,52 @@
       margin: 0;
       padding: 0;
       box-sizing: border-box;
-      -webkit-user-drag: none;
       user-select: none;
     }
+
     html, body {
       height: 100%;
+      overflow-x: hidden;
       background-color: white;
       font-family: Arial, sans-serif;
-      overflow-x: hidden;
     }
-    body {
-      color: black;
-    }
+
     header {
       position: fixed;
       top: 0;
       left: 0;
-      width: 100vw;
+      width: 100%;
       height: 64px;
       display: flex;
       justify-content: space-between;
       align-items: center;
       padding: 12px 16px;
       background-color: white;
-      color: black;
-      z-index: 1200;
       border-bottom: 1px solid #ccc;
+      z-index: 1200;
     }
-    .menu-icon, .cart-icon-container {
-      display: flex;
-      align-items: center;
-      height: 22px;
-      cursor: pointer;
-      z-index: 1300;
-      position: relative;
-    }
+
     .menu-icon {
       width: 22px;
       height: 16px;
-      margin-top: 4px;
-      justify-content: center;
       position: relative;
+      cursor: pointer;
+      z-index: 1300;
     }
+
     .menu-icon div {
       position: absolute;
       width: 22px;
       height: 2px;
       background-color: black;
-      left: 0;
       border-radius: 2px;
       transition: all 0.4s ease;
     }
+
     .menu-icon div:nth-child(1) { top: 0; }
     .menu-icon div:nth-child(2) { top: 7px; }
     .menu-icon div:nth-child(3) { top: 14px; }
+
     .menu-icon.open div:nth-child(1) {
       transform: rotate(45deg);
       top: 7px;
@@ -75,76 +67,99 @@
       transform: rotate(-45deg);
       top: 7px;
     }
+
     .logo-container {
       position: absolute;
       left: 50%;
       top: 57%;
       transform: translate(-50%, -50%);
       z-index: 1300;
+      cursor: pointer;
     }
+
     .logo {
       height: 36px;
     }
+
+    .cart-icon-container {
+      display: flex;
+      align-items: center;
+      height: 22px;
+      position: relative;
+      z-index: 1300;
+      cursor: pointer;
+    }
+
     .cart-icon {
       height: 22px;
-      display: block;
     }
+
     .cart-count {
       position: absolute;
       top: -6px;
       right: -6px;
       background-color: white;
-      color: #111;
+      color: black;
       border-radius: 50%;
       font-size: 10px;
       padding: 2px 5px;
-      line-height: 1;
       min-width: 16px;
       text-align: center;
       display: none;
     }
+
     .image-box {
       margin-top: 64px;
       width: 100%;
       height: 400px;
+      overflow: hidden;
       position: relative;
       background-color: black;
-      overflow: hidden;
     }
+
     .slider {
       display: flex;
-      width: calc(100% * 4); /* 3 images + 1 clone */
       height: 100%;
-      transition: transform 0.5s ease-in-out;
+      animation: scrollSlider 30s linear infinite;
     }
+
     .slide-img {
-      flex: 0 0 100%;
+      width: 100vw;
       height: 400px;
       object-fit: cover;
-      user-select: none;
-      -webkit-user-drag: none;
+      flex-shrink: 0;
     }
+
+    @keyframes scrollSlider {
+      0% { transform: translateX(0); }
+      25% { transform: translateX(-100vw); }
+      50% { transform: translateX(-200vw); }
+      75% { transform: translateX(-300vw); }
+      100% { transform: translateX(-400vw); }
+    }
+
     .arrow {
       position: absolute;
       top: 50%;
-      transform: translateY(-50%);
       width: 14px;
       height: 14px;
       border: solid white;
-      border-width: 0 2.5px 2.5px 0;
+      border-width: 0 2px 2px 0;
       padding: 4px;
       cursor: pointer;
       z-index: 2;
-      user-select: none;
     }
+
     .arrow.left {
-      left: 8px;
+      left: 10px;
       transform: translateY(-50%) rotate(135deg);
     }
+
     .arrow.right {
-      right: 8px;
+      right: 10px;
       transform: translateY(-50%) rotate(-45deg);
     }
+
     .sidebar {
       position: fixed;
       top: 0;
@@ -153,25 +168,18 @@
       height: 100vh;
       background-color: white;
       font-family: 'Oswald', sans-serif;
-      font-weight: 500;
       font-size: 24px;
-      padding: 80px 20px 20px 20px;
+      padding: 80px 20px 20px;
       display: flex;
       flex-direction: column;
-      align-items: flex-start;
-      overflow-y: auto;
+      transition: left 0.4s ease-in-out;
       z-index: 1100;
-      color: black;
-      transition: left 0.5s cubic-bezier(0.4, 0, 0.2, 1);
-      will-change: left;
-      -webkit-overflow-scrolling: touch;
     }
+
     .sidebar.open {
       left: 0;
     }
-    main {
-      display: none;
-    }
+
     @media (min-width: 768px) {
       header {
         display: none;
@@ -180,72 +188,68 @@
   </style>
 </head>
 <body>
-
   <header>
-    <div id="menuToggle" class="menu-icon" aria-label="Toggle sidebar" role="button" tabindex="0">
-      <div></div>
-      <div></div>
-      <div></div>
+    <div id="menuToggle" class="menu-icon">
+      <div></div><div></div><div></div>
     </div>
 
-    <div class="logo-container" id="logoContainer" title="Go to main page" role="button" tabindex="0">
+    <div class="logo-container" id="logoContainer">
       <img src="https://github.com/mattscianna/mattscianna/blob/main/MATTSCIANNA.png?raw=true" alt="Matt Scianna Logo" class="logo" />
     </div>
 
-    <div class="cart-icon-container" title="View Cart" role="button" tabindex="0">
+    <div class="cart-icon-container">
       <img src="https://github.com/mattscianna/mattscianna/blob/main/SHOPPINGBAG.png?raw=true" alt="Cart" class="cart-icon" />
       <div class="cart-count" id="cartCount">0</div>
     </div>
   </header>
 
-  <div class="image-box" aria-label="Image slider">
-    <div class="slider" id="slider">
-      <img class="slide-img" src="https://picsum.photos/800/800?random=1" alt="Image 1" />
-      <img class="slide-img" src="https://picsum.photos/800/800?random=2" alt="Image 2" />
-      <img class="slide-img" src="https://picsum.photos/800/800?random=3" alt="Image 3" />
-      <!-- Clone first image for infinite effect -->
-      <img class="slide-img" src="https://picsum.photos/800/800?random=1" alt="Image 1 Clone" />
+  <div class="image-box">
+    <div class="slider">
+      <img class="slide-img" src="https://via.placeholder.com/800x400?text=Image+1" alt="Image 1" />
+      <img class="slide-img" src="https://via.placeholder.com/800x400?text=Image+2" alt="Image 2" />
+      <img class="slide-img" src="https://via.placeholder.com/800x400?text=Image+3" alt="Image 3" />
+      <img class="slide-img" src="https://via.placeholder.com/800x400?text=Image+1" alt="Image 1 repeat" />
+      <img class="slide-img" src="https://via.placeholder.com/800x400?text=Image+2" alt="Image 2 repeat" />
     </div>
-    <div class="arrow left" aria-label="Previous image" role="button" tabindex="0"></div>
-    <div class="arrow right" aria-label="Next image" role="button" tabindex="0"></div>
+    <div class="arrow left" onclick="manualPrevSlide()"></div>
+    <div class="arrow right" onclick="manualNextSlide()"></div>
   </div>
 
-  <nav id="sidebar" class="sidebar" aria-hidden="true" role="navigation" aria-label="Sidebar navigation">
-    <p>Sidebar content goes here.</p>
+  <nav id="sidebar" class="sidebar">
+    <p>Home</p>
+    <p>Shop</p>
+    <p>Contact</p>
   </nav>
 
   <script>
     const menuToggle = document.getElementById('menuToggle');
     const sidebar = document.getElementById('sidebar');
     const logoContainer = document.getElementById('logoContainer');
-    const cartCountEl = document.getElementById('cartCount');
-    const slider = document.getElementById('slider');
-    const slides = document.querySelectorAll('.slide-img');
-    const leftArrow = document.querySelector('.arrow.left');
-    const rightArrow = document.querySelector('.arrow.right');
 
-    let currentIndex = 0;
-    const totalSlides = slides.length - 1; // last one is clone
-
-    // Sidebar toggle
     menuToggle.addEventListener('click', () => {
-      const isOpen = menuToggle.classList.toggle('open');
-      sidebar.classList.toggle('open', isOpen);
-      sidebar.setAttribute('aria-hidden', !isOpen);
+      menuToggle.classList.toggle('open');
+      sidebar.classList.toggle('open');
     });
 
-    // Reload page on logo click
     logoContainer.addEventListener('click', () => {
-      window.location.reload();
+      location.reload();
     });
 
-    // Accessibility for keyboard toggling
-    [menuToggle, logoContainer, leftArrow, rightArrow].forEach(el => {
-      el.addEventListener('keydown', (e) => {
-        if (e.key === 'Enter') el.click();
-      });
-    });
+    function manualPrevSlide() {
+      const slider = document.querySelector('.slider');
+      slider.style.animation = 'none';
+      slider.style.transform = 'translateX(0)';
+      void slider.offsetWidth;
+      slider.style.animation = '';
+    }
 
-    // Arrows click handlers
-    leftArrow.addEventListener('click', prevSlide);
-    rightArrow.addEventListener('click', nextSlide);
+    function manualNextSlide() {
+      const slider = document.querySelector('.slider');
+      slider.style.animation = 'none';
+      slider.style.transform = 'translateX(-100vw)';
+      void slider.offsetWidth;
+      slider.style.animation = '';
+    }
+  </script>
+</body>
+</html>
