--- a/website/index.html
+++ b/website/index.html
@@ -163,6 +163,7 @@
       background-color: #f2f2f2;
       margin: 40px auto 16px auto;
       border-radius: 6px;
+      cursor: pointer;
     }
 
     .product-info {
@@ -213,11 +214,13 @@
   <div class="arrow right" onclick="nextSlide()"></div>
 </div>
 
-<!-- New Product Box and Text -->
-<div class="product-image-box"></div>
+<!-- Product Box and Info (clickable box + title + price) -->
+<a href="#" style="text-decoration: none; color: inherit;">
+  <div class="product-image-box"></div>
+</a>
 <div class="product-info">
-  <div class="product-title">MATT SCIANNA JERSEY</div>
-  <div class="product-price">$55.00</div>
+  <div class="product-title">TWO-FIVE JERSEY (RED)</div>
+  <div class="product-price">$50.00</div>
 </div>
 
 <nav id="sidebar" class="sidebar">
