--- a/website/index.html
+++ b/website/index.html
@@ -214,12 +214,24 @@
   <div class="arrow right" onclick="nextSlide()"></div>
 </div>
 
-<!-- Product Box and Info (clickable box + title + price) -->
+<!-- First Product Box and Info -->
 <a href="#" style="text-decoration: none; color: inherit;">
   <div class="product-image-box"></div>
 </a>
 <div class="product-info">
   <div class="product-title">TWO-FIVE JERSEY (RED)</div>
+  <div class="product-price">$50.00</div>
+</div>
+
+<!-- Spacer -->
+<div style="height: 40px;"></div>
+
+<!-- Second Product Box and Info -->
+<a href="#" style="text-decoration: none; color: inherit;">
+  <div class="product-image-box"></div>
+</a>
+<div class="product-info">
+  <div class="product-title">TWO-FIVE JERSEY (WHITE)</div>
   <div class="product-price">$50.00</div>
 </div>
 
