--- a/website/index.html
+++ b/website/index.html
@@ -72,7 +72,7 @@
     .logo-container {
       position: absolute;
       left: 50%;
-      top: 50%;
+      top: 42%;
       transform: translate(-50%, -50%);
       cursor: pointer;
     }
@@ -87,7 +87,7 @@
     }
 
     .logo.alt.scrolled {
-      height: 48px;
+      height: 60px;
     }
 
     .cart-icon-container {
@@ -279,7 +279,8 @@
   });
 
   logoContainer.addEventListener('click', () => {
-    window.location.reload();
+    window.scrollTo({ top: 0, behavior: 'smooth' });
+    setTimeout(() => location.reload(), 300); // Smooth scroll + reload
   });
 
   // Keyboard accessibility
