--- a/website/index.html
+++ b/website/index.html
@@ -28,7 +28,7 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 12px 16px;
+      padding: 8px 16px;
       background-color: white;
       z-index: 1200;
       border-bottom: 1px solid #ccc;
@@ -38,7 +38,7 @@
     .menu-icon {
       width: 22px;
       height: 16px;
-      margin-top: 0px;
+      margin-top: -2px;
       position: relative;
       cursor: pointer;
     }
@@ -72,7 +72,7 @@
     .logo-container {
       position: absolute;
       left: 50%;
-      top: 42%;
+      top: 50%;
       transform: translate(-50%, -50%);
       cursor: pointer;
     }
@@ -92,7 +92,8 @@
 
     .cart-icon-container {
       display: flex;
-      align-items: center;
+      align-items: flex-start;
+      margin-top: -2px;
       height: 22px;
       cursor: pointer;
     }
@@ -210,7 +211,7 @@
     <img src="https://github.com/mattscianna/mattscianna/blob/main/ms-logo.png?raw=true" alt="Matt Scianna Icon Logo" class="logo alt" id="logoImage" />
   </div>
 
-  <div class="cart-icon-container" title="View Cart" role="button" tabindex="0">
+  <div class="cart-icon-container" title="View Cart" role="button" tabindex="0" id="cartIcon">
     <img src="https://github.com/mattscianna/mattscianna/blob/main/SHOPPINGBAG.png?raw=true" alt="Cart" class="cart-icon" />
   </div>
 </header>
@@ -280,10 +281,9 @@
 
   logoContainer.addEventListener('click', () => {
     window.scrollTo({ top: 0, behavior: 'smooth' });
-    setTimeout(() => location.reload(), 300); // Smooth scroll + reload
+    setTimeout(() => window.location.reload(), 200);
   });
 
-  // Keyboard accessibility
   ['menuToggle', 'logoContainer'].forEach(id => {
     const el = document.getElementById(id);
     el.addEventListener('keydown', (e) => {
@@ -291,7 +291,6 @@
     });
   });
 
-  // Scroll-based logo swap and size change
   window.addEventListener('scroll', () => {
     const scrollY = window.scrollY;
     if (scrollY > 50) {
